--- a/arch/arm64/configs/sweet_defconfig
+++ b/arch/arm64/configs/sweet_defconfig
@@ -6135,6 +6135,8 @@ CONFIG_SND_SOC_FOR_ULTRASOUND_PATH=y
 # Sleepy
 #
 CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=228
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=125
 CONFIG_KLAPSE=y
 CONFIG_LLVM_POLLY=y
 CONFIG_DTS_EAGLE=y
