--- a/.github/workflows/sweetoss.yml
+++ b/.github/workflows/sweetoss.yml
@@ -25,3 +25,4 @@ jobs:
       env:
          CHATID: ${{ secrets.CHAT_ID }}
          API_BOT: ${{ secrets.BOT_API }}
+         KERNEL_VERSION: ${{ secrets.KERNEL_VERSION }}
